--- a/Aspert/Aspert/GamePage.xaml
+++ b/Aspert/Aspert/GamePage.xaml
@@ -1,18 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:Aspert.ViewModels"
-             x:Class="Aspert.PlayPage"
-             x:DataType="vm:PlayPageViewModel">
+             x:Class="Aspert.GamePage">
     <ContentPage.Content>
-        <Grid>
-            <Grid.BindingContext>
-                <vm:PlayPageViewModel/>
-            </Grid.BindingContext>
+        <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-            <Button Command="{Binding StartGame}" Text="Empezar Juego"/>
-        </Grid>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
