--- a/Aspert/Aspert/ConfigurationPage.xaml
+++ b/Aspert/Aspert/ConfigurationPage.xaml
@@ -16,12 +16,16 @@
                      HorizontalOptions="Start"
                      Source="menug_aspert.png"
                      Padding="10"/>
+        <ImageButton Grid.Row="2" 
+                     BackgroundColor="Transparent"
+                     Command="{Binding Back}"
+                     HorizontalOptions="Start"
+                     Source="sync_aspert.png"/>
         <Image Grid.Row="1"
-               Grid.RowSpan="2"
                Aspect="Fill"
                Source="bg4_aspert.png"/>
         <Grid Grid.Row="1"
-              RowDefinitions="*,1.3*,*,4*">
+              RowDefinitions="*,1.3*,*,4*,*">
             <Image Grid.Row="1"
                    Source="user_aspert.png"
                    HorizontalOptions="Center"
