--- a/Aspert/Aspert/LoginPage.xaml
+++ b/Aspert/Aspert/LoginPage.xaml
@@ -6,7 +6,7 @@
              x:DataType="vm:LoginPageViewModel">
     <Grid BackgroundColor="White"
           ColumnDefinitions="*,18*,*"
-          RowDefinitions="*,2*,*,2*,*,*,*,0.25*,*">
+          RowDefinitions="*,2*,*,2*,*,*,0.75*,0.25*,0.75*">
         <Grid.BindingContext>
             <vm:LoginPageViewModel/>
         </Grid.BindingContext>
@@ -25,7 +25,7 @@
                Source="user_aspert.png"/>
         <Entry Grid.Column="1"
                Grid.Row="4" 
-               Placeholder="Usuario o Correo"
+               Placeholder="Usuario"
                TextColor="Black"
                Text="{Binding Usuario}"/>
         <Entry Grid.Column="1" 
