--- a/Aspert/Aspert/PlayPage.xaml
+++ b/Aspert/Aspert/PlayPage.xaml
@@ -2,17 +2,22 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:Aspert.ViewModels"
+             xmlns:aspert="clr-namespace:Aspert"
              x:Class="Aspert.PlayPage"
-             x:DataType="vm:PlayPageViewModel">
+             x:DataType="{x:Type vm:ViewModel}">
     <ContentPage.Content>
         <Grid>
             <Grid.BindingContext>
-                <vm:PlayPageViewModel/>
+                <vm:ViewModel/>
             </Grid.BindingContext>
             <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <Button Command="{Binding StartGame}" Text="Empezar Juego"/>
+                   VerticalOptions="CenterAndExpand" 
+                   HorizontalOptions="CenterAndExpand" />
+            <Button Command="{Binding Push}" 
+                    CommandParameter="{Type aspert:GamePage}"
+                    Text="Empezar Juego"/>
+            <ImageButton Command="{Binding Back}"
+                         Source="back_aspert.png"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
