--- a/Aspert/Aspert/RegisterPage.xaml
+++ b/Aspert/Aspert/RegisterPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:vm="clr-namespace:Aspert.ViewModels" 
              x:Class="Aspert.RegisterPage"
-             x:DataType="vm:RegisterPageViewModel">
+             x:DataType="{x:Type vm:RegisterPageViewModel}">
     <Grid BackgroundColor="White"
           ColumnDefinitions="*,18*,*"
           RowDefinitions="*,2*,*,2*,*,*,0.5*,0.75*,0.5*">
